# foldl-benchmarks

./: Foldl_Bench.cabal  Foldl_Bench.hs  README.md  cabal.project
