cabal-version:      2.4
category:           Benchmarks
build-type:         Simple
name:               FoldlBench
synopsis:           Testing performance of scans
version:            0.1.0

executable FoldlBench

  main-is:
    Foldl_Bench.hs

  ghc-options:
    -threaded -rtsopts -O2 -fobject-code -with-rtsopts=-T

  hs-source-dirs:
    .

  build-depends:
      base
    , criterion
        ^>= 1.5.0
    , foldl
        ^>= 1.4.5

  default-language:
    Haskell2010
